--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="trabalho.sine.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Olá mundo!!!" />
 </RelativeLayout>
