--- a/app/SINE/app/src/main/res/layout/activity_result.xml
+++ b/app/SINE/app/src/main/res/layout/activity_result.xml
@@ -22,9 +22,10 @@
             android:layout_centerHorizontal="true" />
 
         <ImageButton
-            android:id="@+id/favorito"
+            android:id="@+id/favoritoBTN"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:onClick="favoriteClick"
             android:background="@drawable/ic_favorite_black"
             android:layout_marginEnd="46dp"
             android:layout_alignTop="@+id/compartilhar"
