--- a/app/SINE/app/src/main/res/layout/list_view_adapter.xml
+++ b/app/SINE/app/src/main/res/layout/list_view_adapter.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="horizontal"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?android:attr/selectableItemBackground"
     android:weightSum="1">
 
 
