--- a/app/SINE/app/src/main/res/layout/activity_result.xml
+++ b/app/SINE/app/src/main/res/layout/activity_result.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentStart="true">
 
         <ImageButton
-            android:id="@+id/compartilhar"
+            android:id="@+id/shareBTN"
+            android:onClick="shareClick"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/ic_to_share"
