--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <!-- We use a Toolbar so that our drawer can be displayed
              in front of the action bar -->
@@ -39,8 +40,8 @@
 
         <RelativeLayout
             android:id="@+id/activity_main"
-            android:layout_width="359dp"
-            android:layout_height="587dp"
+            android:layout_width="372dp"
+            android:layout_height="537dp"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
@@ -57,13 +58,13 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_empregos"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:scrollbars="vertical"
                 android:fadeScrollbars="true"
                 android:scrollbarAlwaysDrawVerticalTrack="true"
-                android:layout_below="@+id/favoriteButton"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="24dp" />
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/favoriteButton" />
         </RelativeLayout>
 
 
