--- a/app/SINE/app/src/main/res/layout/list_view_adapter.xml
+++ b/app/SINE/app/src/main/res/layout/list_view_adapter.xml
@@ -37,26 +37,26 @@
         android:layout_marginEnd="22dp">
 
         <TextView
-            android:id="@+id/emprego_nome"
+            android:id="@+id/vaga_nome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Titulo"
-            android:textSize="10dp" />
+            android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/emprego_descricao"
+            android:id="@+id/vaga_empresa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Descriçao"
-            android:textSize="5dp"
+            android:text="Empresa"
+            android:textSize="13dp"
             android:layout_weight="0.34" />
 
         <TextView
-            android:id="@+id/emprego_endereco"
+            android:id="@+id/vaga_endereco"
             android:layout_width="228dp"
             android:layout_height="wrap_content"
             android:text="Endereco"
-            android:textSize="5dp" />
+            android:textSize="13dp" />
 
     </LinearLayout>
 
