--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginTop="40dp"
+    android:background="?android:attr/selectableItemBackground">
 
-    <!-- Your normal content view -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
-
-        <!-- We use a Toolbar so that our drawer can be displayed
-             in front of the action bar -->
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/my_toolbar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:minHeight="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.v7.widget.SearchView
-                    android:id="@+id/pesquisa"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left|center_vertical">
-                </android.support.v7.widget.SearchView>
-
-            </FrameLayout>
-
-        </android.support.v7.widget.Toolbar>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="?android:attr/selectableItemBackground"
+        >
 
         <RelativeLayout
-            android:id="@+id/activity_main"
-            android:layout_width="372dp"
-            android:layout_height="537dp"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:layout_width="176dp"
+            android:layout_height="192dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryDark"
+            android:onClick="searchActivity">
 
-            <Button
-                android:text="Favoritos"
+            <TextView
+                android:text="@string/search_vaga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/favoriteButton"
-                android:onClick="favoriteOpenClick"
-                android:layout_centerHorizontal="true" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/list_empregos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:scrollbars="vertical"
-                android:fadeScrollbars="true"
-                android:scrollbarAlwaysDrawVerticalTrack="true"
                 android:layout_alignParentBottom="true"
-                android:layout_below="@+id/favoriteButton" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="18dp"
+                android:textColor="#fff"
+                android:id="@+id/search_vaga"
+                android:textSize="20dp" />
 
-            <Button
-                android:text="Filtro"
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_lupa_emprego"
+                android:layout_above="@+id/search_vaga"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="14dp"
+                android:id="@+id/lupa" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="176dp"
+            android:layout_height="192dp"
+            android:background="#00897B"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="10dp"
+            android:onClick="favoriteActivity"
+            >
+
+            <TextView
+                android:text="@string/favorite_vaga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/list_empregos"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="13dp"
-                android:onClick="filterClick"
-                android:id="@+id/filterButton" />
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="18dp"
+                android:textColor="#fff"
+                android:id="@+id/vagasfavoritas"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_favorite_border_black_48dp"
+                android:layout_above="@+id/vagasfavoritas"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="14dp"
+                android:id="@+id/estrela" />
+
         </RelativeLayout>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground">
+
+        <RelativeLayout
+            android:layout_width="176dp"
+            android:layout_height="192dp"
+            android:background="#00895C"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="5dp"
+            android:onClick="graphicActivity"
+            >
+
+            <TextView
+                android:text="@string/favorite_vaga"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="18dp"
+                android:textColor="#fff"
+                android:id="@+id/mediasalarial"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_grafico"
+                android:layout_above="@+id/mediasalarial"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="14dp"
+                android:id="@+id/grafico" /></RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="176dp"
+            android:layout_height="192dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/colorPrimary">
+
+        </RelativeLayout>
     </LinearLayout>
 
     <!-- Your drawer view. This can be any view, FrameLayout
          is just an example. As we have set fitSystemWindows=true
          this will be displayed under the status bar. -->
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
