Input da função e cidade
Adicionei ao alertDiaglo de filtros do searchActivity os inputs para
cidade e função. E tentei montar uma requisição completa pra teste. Só
não sei como que pega os id's

--- a/app/SINE/app/src/main/res/layout/activity_search.xml
+++ b/app/SINE/app/src/main/res/layout/activity_search.xml
@@ -36,6 +36,5 @@
         android:id="@+id/filterButton"
         android:layout_marginTop="14dp"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/favoriteButton"
-        android:layout_marginEnd="74dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
