--- a/app/SINE/app/src/main/res/layout/activity_result.xml
+++ b/app/SINE/app/src/main/res/layout/activity_result.xml
@@ -7,134 +7,6 @@
     android:layout_height="match_parent"
     tools:context="trabalho.sine.ResultActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="34dp"
-        android:src="@drawable/titleblack"
-        android:id="@+id/titleLabel" />
-
-    <TextView
-        android:text="akdkjlajsdkajdalkdjaksdjaljdlaskdj"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/titleLabel"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/titleValue"
-        android:layout_alignBottom="@+id/titleLabel"
-        android:layout_alignTop="@+id/titleLabel" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/titleLabel"
-        android:layout_alignStart="@+id/titleLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/moneyblack"
-        android:id="@+id/moneyLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/moneyLabel"
-        android:layout_alignStart="@+id/titleValue"
-        android:id="@+id/moneyValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/moneyLabel"
-        android:layout_alignStart="@+id/moneyLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/cityblack"
-        android:id="@+id/cityLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/cityLabel"
-        android:layout_alignStart="@+id/moneyValue"
-        android:id="@+id/cityValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cityLabel"
-        android:layout_alignStart="@+id/cityLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/addressblack"
-        android:id="@+id/addressLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/addressLabel"
-        android:layout_alignStart="@id/cityValue"
-        android:layout_toEndOf="@+id/titleValue"
-        android:id="@+id/addressValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/addressLabel"
-        android:layout_alignStart="@+id/addressLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/workblack"
-        android:id="@+id/companyLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/companyLabel"
-        android:layout_alignStart="@id/addressValue"
-        android:layout_toEndOf="@+id/cityValue"
-        android:id="@+id/companyValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/companyLabel"
-        android:layout_alignStart="@+id/companyLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/functionblack"
-        android:id="@+id/functionLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/functionLabel"
-        android:layout_alignStart="@id/companyValue"
-        android:layout_toEndOf="@+id/companyValue"
-        android:id="@+id/functionValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/functionLabel"
-        android:layout_alignStart="@+id/functionLabel"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/desblack"
-        android:id="@+id/descriptionLabel" />
-
-    <TextView
-        android:text="value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/descriptionLabel"
-        android:layout_alignStart="@id/functionValue"
-        android:layout_toEndOf="@+id/addressValue"
-        android:id="@+id/descriptionValue" />
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -142,21 +14,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/openbrowserwhite"
-            android:onClick="openLink"
-            android:id="@+id/openLinkImage"
-            android:layout_marginLeft="30dp"
-            android:layout_alignParentStart="true" />
-
         <ImageButton
             android:id="@+id/shareBTN"
             android:onClick="shareClick"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:background="@drawable/sharewhite"
+            android:background="@drawable/ic_to_share"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
@@ -165,12 +28,164 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:onClick="favoriteClick"
-            android:background="@drawable/starblack"
+            android:background="@drawable/ic_favorite_black"
             android:layout_marginEnd="46dp"
             android:layout_alignTop="@+id/compartilhar"
             android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
+
+    <TextView
+        android:text="Título: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="34dp"
+        android:id="@+id/titleLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/titleLabel"
+        android:layout_marginStart="27dp"
+        android:id="@+id/titleValue"
+        android:layout_alignBottom="@+id/titleLabel"
+        android:layout_alignTop="@+id/titleLabel" />
+
+    <TextView
+        android:text="Salário: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleLabel"
+        android:layout_alignStart="@+id/titleLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/moneyLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/moneyLabel"
+        android:layout_alignStart="@+id/titleValue"
+        android:id="@+id/moneyValue" />
+
+    <TextView
+        android:text="Cidade: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/moneyLabel"
+        android:layout_alignStart="@+id/moneyLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/cityLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/cityLabel"
+        android:layout_alignStart="@+id/moneyValue"
+        android:id="@+id/cityValue" />
+
+    <TextView
+        android:text="Endereço: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cityLabel"
+        android:layout_alignStart="@+id/cityLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/addressLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/addressLabel"
+        android:layout_alignStart="@id/cityValue"
+        android:layout_toEndOf="@+id/titleValue"
+        android:id="@+id/addressValue" />
+
+    <TextView
+        android:text="Empresa: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addressLabel"
+        android:layout_alignStart="@+id/addressLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/companyLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/companyLabel"
+        android:layout_alignStart="@id/addressValue"
+        android:layout_toEndOf="@+id/cityValue"
+        android:id="@+id/companyValue" />
+
+    <TextView
+        android:text="Função: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/companyLabel"
+        android:layout_alignStart="@+id/companyLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/functionLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/functionLabel"
+        android:layout_alignStart="@id/companyValue"
+        android:layout_toEndOf="@+id/companyValue"
+        android:id="@+id/functionValue" />
+
+    <TextView
+        android:text="Descrição: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/functionLabel"
+        android:layout_alignStart="@+id/functionLabel"
+        android:layout_marginTop="23dp"
+        android:id="@+id/descriptionLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/descriptionLabel"
+        android:layout_alignStart="@id/functionValue"
+        android:layout_toEndOf="@+id/addressValue"
+        android:id="@+id/descriptionValue" />
+
+    <TextView
+        android:text="Url: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/urLabel"
+        android:layout_alignTop="@+id/openLinkImage"
+        android:layout_alignStart="@+id/descriptionLabel" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/urlValue"
+        android:layout_alignTop="@+id/openLinkImage"
+        android:layout_toEndOf="@+id/descriptionValue" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/openlink"
+        android:layout_marginStart="55dp"
+        android:onClick="openLink"
+        android:id="@+id/openLinkImage"
+        android:layout_below="@+id/descriptionValue"
+        android:layout_toEndOf="@+id/urlValue" />
 
 
 </RelativeLayout>
